crates/solidity-v2/testing/snapshots/cst_output/DecimalNumberExpression/leading_period_ident_negative_exponent_like/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Period. One of AddressKeyword_Reserved, AtKeyword_Unreserved, Bang, BoolKeyword_Reserved, BytesKeyword_Reserved, DecimalLiteral, DeleteKeyword_Reserved, ErrorKeyword_Unreserved, FalseKeyword_Reserved, FixedKeyword_Reserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, HexLiteral, HexStringLiteral, Identifier, IntKeyword_Reserved, LayoutKeyword_Unreserved, Minus, MinusMinus, NewKeyword_Reserved, OpenBracket, OpenParen, PayableKeyword_Reserved, PlusPlus, RevertKeyword_Unreserved, StringKeyword_Reserved, StringLiteral, SuperKeyword_Reserved, ThisKeyword_Reserved, Tilde, TransientKeyword_Unreserved, TrueKeyword_Reserved, TypeKeyword_Reserved, UfixedKeyword_Reserved, UintKeyword_Reserved, UnicodeStringLiteral was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/DecimalNumberExpression/leading_period_ident_negative_exponent_like/input.sol:1:19]
   │
 1 │ uint constant x = .e-1;
   │                   ┬  
   │                   ╰── Error occurred here.
───╯
